--- a/proj1/index.html
+++ b/proj1/index.html
@@ -75,18 +75,18 @@
             <table style="width=100%">
                 <tr>
                     <td>
-                        <img src="images/task2-SR1.png" align="middle" width="400px" />
+                        <img src="images/Task2-SR1.png" align="middle" width="400px" />
                         <figcaption align="middle">No anti-aliasing (sample rate 1).</figcaption>
                     </td>
                     <td>
-                        <img src="images/task2-SR4.png" align="middle" width="400px" />
+                        <img src="images/Task2-SR4.png" align="middle" width="400px" />
                         <figcaption align="middle">Anti-aliasing at a sample rate of 4.</figcaption>
                     </td>
                 </tr>
                 <br />
                 <tr>
                     <td>
-                        <img src="images/task2-SR16.png" align="middle" width="400px" />
+                        <img src="images/Task2-SR16.png" align="middle" width="400px" />
                         <figcaption align="middle">Anti-aliasing at a sample rate of 16.</figcaption>
                     </td>
                 </tr>
